--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ img {
 
 .bg {
     overflow: hidden;
+    height: 100vh;
 }
 
 .bg-image-overlay {
@@ -21,7 +22,7 @@ img {
     top: 0;
     left: 0;
     width: 100%;
-    height: 123.4%;
+    height: 100%;
     opacity: 0.5;
     
 }
